@@ -105,9 +105,9 @@ boot:
 </screen></informalexample>
 
 At yaboot's <prompt>boot:</prompt> prompt, type either
-<userinput>install</userinput> or <userinput>install-safe</userinput>
-followed by a &enterkey;.  The `safe' option uses the
-<userinput>video=ofonly</userinput> argument for maximum
+<userinput>install</userinput> or <userinput>install video=ofonly</userinput>
+followed by a &enterkey;.  The
+<userinput>video=ofonly</userinput> argument is for maximum
 compatibility; you can try it if <userinput>install</userinput>
 doesn't work. The Debian installation program should start.
 
