@@ -12,6 +12,10 @@ debian-installer (20040721) UNRELEASED; urgency=low
   * Stephen R. Marenka
     - Kill second set of m68k initrds, genext2fs seems to work.
     - Add /dev/null to userdevfs-dev.txt.
+  * Colin Watson
+    - Document 'install video=ofonly' instead of 'install-safe', which is
+      going away (it caused combinatorial explosion in the yaboot prompt on
+      full CDs).
 
  -- Joey Hess <joeyh@debian.org>  Wed, 21 Jul 2004 16:43:56 -0400
 
